# Flet_Material3_Demo

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  utils.py
pages/: WidgetsPage.py  __init__.py
screens/: __init__.py  colors_screen.py  components_screen.py  elevation_screen.py  typography_screen.py
utilities/: Section.py  SubSection.py  __init__.py  color_utils.py  components_utils.py  elevation_utils.py  section.py  section_components.py
