[tool.poetry]
name = "flet-material3-demo"
version = "0.1.0"
description = "Rebuilding the [Flutter version](https://flutter.github.io/samples/web/material_3_demo/#/) using the [Flet](https://flet.dev) python framework."
authors = ["TheEthicalBoy"]
license = "MIT"
readme = "README.md"
packages = [{include = "flet_material3_demo"}]

[tool.poetry.dependencies]
python = "^3.11.0"
flet = "^0.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
